# nl-it-translator

./: .gitignore  README.md  bot.py  env.example  index.html  pyproject.toml  render.yaml
backend/: package-lock.json  package.json  server.js
client/: package.json
client/src/app/components/: App.tsx
frontend/: index.html
server/: bot.py  env.example  pyproject.toml
