[project]
name = "nl-it-translator"
version = "0.1.0"
description = "Real-time Dutch-Italian voice translation bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pipecat-ai[daily,webrtc,websocket,cartesia,google,silero,deepgram,runner,soundfile]>=1.0.0",
  "pipecatcloud>=0.4.4",
  "aiofiles"
]
